StereoKitC/stereokit.h


typedef int32_t bool32_t;


/*When rendering content, you can filter what you're rendering by the
  RenderLayer that they're on. This allows you to draw items that are
  visible in one render, but not another. For example, you may wish
  to draw a player's avatar in a 'mirror' rendertarget, but not in
  the primary display. See `Renderer.LayerFilter` for configuring what
  the primary display renders.
  
  Render layers can also be mixed and matched like bit-flags!*/
typedef enum render_layer_ {
	/*The default render layer. All Draw use this layer unless
	  otherwise specified.*/
	render_layer_0                = 1 << 0,
	/*Render layer 1.*/
	render_layer_1                = 1 << 1,
	/*Render layer 2.*/
	render_layer_2                = 1 << 2,
	/*Render layer 3.*/
	render_layer_3                = 1 << 3,
	/*Render layer 4.*/
	render_layer_4                = 1 << 4,
	/*Render layer 5.*/
	render_layer_5                = 1 << 5,
	/*Render layer 6.*/
	render_layer_6                = 1 << 6,
	/*Render layer 7.*/
	render_layer_7                = 1 << 7,
	/*Render layer 8.*/
	render_layer_8                = 1 << 8,
	/*Render layer 9.*/
	render_layer_9                = 1 << 9,
	/*The default VFX layer, StereoKit draws some non-standard
	  mesh content using this flag, such as lines.*/
	render_layer_vfx              = 1 << 10,
	/*This is a flag that specifies all possible layers. If you
	  want to render all layers, then this is the layer filter
	  you would use. This is the default for render filtering.*/
	render_layer_all              = 0xFFFF,
	/*This is a combination of all layers that are not the VFX layer.*/
	render_layer_all_regular      = render_layer_0 | render_layer_1 | render_layer_2 | render_layer_3 | render_layer_4 | render_layer_5 | render_layer_6 | render_layer_7 | render_layer_8 | render_layer_9,
} render_layer_;

typedef struct vec3 {
	float x;
	float y;
	float z;
} vec3;

typedef struct vec4 {
	float x;
	float y;
	float z;
	float w;
} vec4;

typedef struct quat {
	float x;
	float y;
	float z; 
	float w;
} quat;

typedef union matrix {
	vec4 row[4];
	float m[16];
} matrix;

typedef struct rect_t {
	float x;
	float y;
	float w;
	float h;
} rect_t;

typedef struct pose_t {
	vec3 position;
	quat orientation;
} pose_t;


///////////////////////////////////////////

typedef struct color32 {
	uint8_t r;
	uint8_t g;
	uint8_t b;
	uint8_t a;
} color32;

typedef struct color128 {
	float r;
	float g;
	float b;
	float a;
} color128;

///////////////////////////////////////////

typedef struct spherical_harmonics_t {
	vec3     coefficients[9];
} spherical_harmonics_t;


///////////////////////////////////////////

typedef struct line_point_t {
	vec3    pt;
	float   thickness;
	color32 color;
} line_point_t;

SK_API void line_add_listv(const line_point_t *points, int32_t count);


///////////////////////////////////////////

/*When rendering to a rendertarget, this tells if and what of the
  rendertarget gets cleared before rendering. For example, if you
  are assembling a sheet of images, you may want to clear
  everything on the first image draw, but not clear on subsequent
  draws.*/
typedef enum render_clear_ {
	/*Don't clear anything, leave it as it is.*/
	render_clear_none  = 0,
	/*Clear the rendertarget's color data.*/
	render_clear_color = 1 << 0,
	/*Clear the rendertarget's depth data, if present.*/
	render_clear_depth = 1 << 1,
	/*Clear both color and depth data.*/
	render_clear_all   = render_clear_color | render_clear_depth,
} render_clear_;


/*The projection mode used by StereoKit for the main camera! You
  can use this with Renderer.Projection. These options are only
  available in flatscreen mode, as MR headsets provide very
  specific projection matrices.*/
typedef enum projection_ {
	/*This is the default projection mode, and the one you're most likely
	  to be familiar with! This is where parallel lines will converge as
	  they go into the distance.*/
	projection_perspective = 0,
	/*Orthographic projection mode is often used for tools, 2D rendering,
	  thumbnails of 3D objects, or other similar cases. In this mode,
	  parallel lines remain parallel regardless of how far they travel.*/
	projection_ortho = 1
} projection_;


//TODO: for v0.4, rename render_set_clip and render_set_fov to indicate they are only for perspective
SK_API void                  render_set_clip       (float near_plane sk_default(0.08f), float far_plane sk_default(50));

SK_API void                  render_set_fov        (float field_of_view_degrees sk_default(90.0f));

SK_API void                  render_set_ortho_clip (float near_plane sk_default(0.0f), float far_plane sk_default(50));

SK_API void                  render_set_ortho_size (float viewport_height_meters);

SK_API void                  render_set_projection (projection_ proj);

SK_API projection_           render_get_projection ();

SK_API matrix                render_get_cam_root   ();

SK_API void                  render_set_cam_root   (const sk_ref(matrix) cam_root);

SK_API void                  render_set_skytex     (tex_t sky_texture);

SK_API tex_t                 render_get_skytex     ();

SK_API void                  render_set_skylight   (const sk_ref(spherical_harmonics_t) light_info);

SK_API spherical_harmonics_t render_get_skylight   ();

SK_API void                  render_set_filter     (render_layer_ layer_filter);

SK_API render_layer_         render_get_filter     ();

SK_API void                  render_override_capture_filter(bool32_t use_override_filter, render_layer_ layer_filter sk_default(render_layer_all));

SK_API render_layer_         render_get_capture_filter     ();

SK_API bool32_t              render_has_capture_filter     ();

SK_API void                  render_set_clear_color(color128 color_gamma);

SK_API color128              render_get_clear_color();

SK_API void                  render_enable_skytex  (bool32_t show_sky);

SK_API bool32_t              render_enabled_skytex ();

SK_API void                  render_global_texture (int32_t register_slot, tex_t texture);

SK_API void                  render_add_mesh       (mesh_t mesh, material_t material, const sk_ref(matrix) transform, color128 color_linear sk_default({1,1,1,1}), render_layer_ layer sk_default(render_layer_0));

SK_API void                  render_add_model      (model_t model, const sk_ref(matrix) transform, color128 color_linear sk_default({1,1,1,1}), render_layer_ layer sk_default(render_layer_0));

SK_API void                  render_blit           (tex_t to_rendertarget, material_t material);

SK_API void                  render_screenshot     (const char *file, vec3 from_viewpt, vec3 at, int width, int height, float field_of_view_degrees);

SK_API void                  render_to             (tex_t to_rendertarget, const sk_ref(matrix) camera, const sk_ref(matrix) projection, render_layer_ layer_filter sk_default(render_layer_all), render_clear_ clear sk_default(render_clear_all), rect_t viewport sk_default({}));

SK_API void                  render_material_to    (tex_t to_rendertarget, material_t override_material, const sk_ref(matrix) camera, const sk_ref(matrix) projection, render_layer_ layer_filter sk_default(render_layer_all), render_clear_ clear sk_default(render_clear_all), rect_t viewport sk_default({}));

SK_API void                  render_get_device     (void **device, void **context);


///////////////////////////////////////////

SK_API void          hierarchy_push              (const sk_ref(matrix) transform);

SK_API void          hierarchy_pop               ();

SK_API void          hierarchy_set_enabled       (bool32_t enabled);

SK_API bool32_t      hierarchy_is_enabled        ();

SK_API const matrix *hierarchy_to_world          ();

SK_API const matrix *hierarchy_to_local          ();

SK_API vec3          hierarchy_to_local_point    (const sk_ref(vec3  ) world_pt);

SK_API vec3          hierarchy_to_local_direction(const sk_ref(vec3  ) world_dir);

SK_API quat          hierarchy_to_local_rotation (const sk_ref(quat  ) world_orientation);

SK_API pose_t        hierarchy_to_local_pose     (const sk_ref(pose_t) world_pose);

SK_API vec3          hierarchy_to_world_point    (const sk_ref(vec3  ) local_pt);

SK_API vec3          hierarchy_to_world_direction(const sk_ref(vec3  ) local_dir);

SK_API quat          hierarchy_to_world_rotation (const sk_ref(quat  ) local_orientation);

SK_API pose_t        hierarchy_to_world_pose     (const sk_ref(pose_t) local_pose);


///////////////////////////////////////////

typedef struct sound_inst_t {
	uint16_t _id;
	int16_t  _slot;
} sound_inst_t;


SK_API sound_t      sound_find           (const char *id);

SK_API void         sound_set_id         (sound_t sound, const char *id);

SK_API sound_t      sound_create         (const char *filename);

SK_API sound_t      sound_create_stream  (float buffer_duration);

SK_API sound_t      sound_create_samples (const float *samples_at_48000s, uint64_t sample_count);

SK_API sound_t      sound_generate       (float (*function)(float sample_time), float duration);

SK_API void         sound_write_samples  (sound_t sound, const float *samples,     uint64_t sample_count);

SK_API uint64_t     sound_read_samples   (sound_t sound, float       *out_samples, uint64_t sample_count);

SK_API uint64_t     sound_unread_samples (sound_t sound);

SK_API uint64_t     sound_total_samples  (sound_t sound);

SK_API uint64_t     sound_cursor_samples (sound_t sound);

SK_API sound_inst_t sound_play           (sound_t sound, vec3 at, float volume);

SK_API float        sound_duration       (sound_t sound);

SK_API void         sound_addref         (sound_t sound);

SK_API void         sound_release        (sound_t sound);


SK_API void         sound_inst_stop      (sound_inst_t sound_inst);

SK_API bool32_t     sound_inst_is_playing(sound_inst_t sound_inst);

SK_API void         sound_inst_set_pos   (sound_inst_t sound_inst, vec3 pos);

SK_API vec3         sound_inst_get_pos   (sound_inst_t sound_inst);

SK_API void         sound_inst_set_volume(sound_inst_t sound_inst, float volume);

SK_API float        sound_inst_get_volume(sound_inst_t sound_inst);


///////////////////////////////////////////

SK_API int32_t      mic_device_count     ();

SK_API const char  *mic_device_name      (int32_t index);

SK_API bool32_t     mic_start            (const char *device_name sk_default(nullptr));

SK_API void         mic_stop             ();

SK_API sound_t      mic_get_stream       ();

SK_API bool32_t     mic_is_recording     ();


///////////////////////////////////////////

typedef struct file_filter_t {
	char ext[32];
} file_filter_t;


/*When opening the Platform.FilePicker, this enum describes
  how the picker should look and behave.*/
typedef enum picker_mode_ {
	/*Allow opening a single file.*/
	picker_mode_open,
	/*Allow the user to enter or select the name of the
	  destination file.*/
	picker_mode_save,
} picker_mode_;


/*Soft keyboard layouts are often specific to the type of text that they're
  editing! This enum is a collection of common text contexts that SK can pass
  along to the OS's soft keyboard for a more optimal layout.*/
typedef enum text_context_ {
	/*General text editing, this is the most common type of text, and would
	  result in a 'standard' keyboard layout.*/
	text_context_text = 1,
	/*Numbers and numerical values.*/
	text_context_number = 2,
	/*This text specifically represents some kind of URL/URI address.*/
	text_context_uri = 10,
	/*This is a password, and should not be visible when typed!*/
	text_context_password = 18,

} text_context_;


SK_API void     platform_file_picker        (picker_mode_ mode, void *callback_data, void (*on_confirm)(void *callback_data, bool32_t confirmed, const char *filename), const file_filter_t *filters, int32_t filter_count);

SK_API void     platform_file_picker_sz     (picker_mode_ mode, void *callback_data, void (*on_confirm)(void *callback_data, bool32_t confirmed, const char *filename, int32_t filename_length), const file_filter_t *filters, int32_t filter_count);

SK_API void     platform_file_picker_close  ();