LibStereoKit.jl


function line_add_listv(points, count)
    @ccall StereoKitC.line_add_listv(points::Ptr{line_point_t}, count::Int32)::Cvoid
end

@cenum render_clear_::UInt32 begin
    render_clear_none = 0
    render_clear_color = 1
    render_clear_depth = 2
    render_clear_all = 3
end

@cenum projection_::UInt32 begin
    projection_perspective = 0
    projection_ortho = 1
end

function render_set_clip(near_plane, far_plane)
    @ccall StereoKitC.render_set_clip(near_plane::Cfloat, far_plane::Cfloat)::Cvoid
end

function render_set_fov(field_of_view_degrees)
    @ccall StereoKitC.render_set_fov(field_of_view_degrees::Cfloat)::Cvoid
end

function render_set_ortho_clip(near_plane, far_plane)
    @ccall StereoKitC.render_set_ortho_clip(near_plane::Cfloat, far_plane::Cfloat)::Cvoid
end

function render_set_ortho_size(viewport_height_meters)
    @ccall StereoKitC.render_set_ortho_size(viewport_height_meters::Cfloat)::Cvoid
end

function render_set_projection(proj)
    @ccall StereoKitC.render_set_projection(proj::projection_)::Cvoid
end

# no prototype is found for this function at stereokit.h:1351:30, please use with caution
function render_get_projection()
    @ccall StereoKitC.render_get_projection()::projection_
end

# no prototype is found for this function at stereokit.h:1352:30, please use with caution
function render_get_cam_root()
    @ccall StereoKitC.render_get_cam_root()::matrix
end

function render_set_cam_root(cam_root)
    @ccall StereoKitC.render_set_cam_root(cam_root::Ptr{matrix})::Cvoid
end

function render_set_skytex(sky_texture)
    @ccall StereoKitC.render_set_skytex(sky_texture::tex_t)::Cvoid
end

# no prototype is found for this function at stereokit.h:1355:30, please use with caution
function render_get_skytex()
    @ccall StereoKitC.render_get_skytex()::tex_t
end

function render_set_skylight(light_info)
    @ccall StereoKitC.render_set_skylight(light_info::Ptr{spherical_harmonics_t})::Cvoid
end

# no prototype is found for this function at stereokit.h:1357:30, please use with caution
function render_get_skylight()
    @ccall StereoKitC.render_get_skylight()::spherical_harmonics_t
end

function render_set_filter(layer_filter)
    @ccall StereoKitC.render_set_filter(layer_filter::render_layer_)::Cvoid
end

# no prototype is found for this function at stereokit.h:1359:30, please use with caution
function render_get_filter()
    @ccall StereoKitC.render_get_filter()::render_layer_
end

function render_override_capture_filter(use_override_filter, layer_filter)
    @ccall StereoKitC.render_override_capture_filter(use_override_filter::bool32_t, layer_filter::render_layer_)::Cvoid
end

# no prototype is found for this function at stereokit.h:1361:30, please use with caution
function render_get_capture_filter()
    @ccall StereoKitC.render_get_capture_filter()::render_layer_
end

# no prototype is found for this function at stereokit.h:1362:30, please use with caution
function render_has_capture_filter()
    @ccall StereoKitC.render_has_capture_filter()::bool32_t
end

function render_set_clear_color(color_gamma)
    @ccall StereoKitC.render_set_clear_color(color_gamma::color128)::Cvoid
end

# no prototype is found for this function at stereokit.h:1364:30, please use with caution
function render_get_clear_color()
    @ccall StereoKitC.render_get_clear_color()::color128
end

function render_enable_skytex(show_sky)
    @ccall StereoKitC.render_enable_skytex(show_sky::bool32_t)::Cvoid
end

# no prototype is found for this function at stereokit.h:1366:30, please use with caution
function render_enabled_skytex()
    @ccall StereoKitC.render_enabled_skytex()::bool32_t
end

function render_global_texture(register_slot, texture)
    @ccall StereoKitC.render_global_texture(register_slot::Int32, texture::tex_t)::Cvoid
end

function render_add_mesh(mesh, material, transform, color_linear, layer)
    @ccall StereoKitC.render_add_mesh(mesh::mesh_t, material::material_t, transform::Ptr{matrix}, color_linear::color128, layer::render_layer_)::Cvoid
end

function render_add_model(model, transform, color_linear, layer)
    @ccall StereoKitC.render_add_model(model::model_t, transform::Ptr{matrix}, color_linear::color128, layer::render_layer_)::Cvoid
end

function render_blit(to_rendertarget, material)
    @ccall StereoKitC.render_blit(to_rendertarget::tex_t, material::material_t)::Cvoid
end

function render_screenshot(file, from_viewpt, at, width, height, field_of_view_degrees)
    @ccall StereoKitC.render_screenshot(file::Ptr{Cchar}, from_viewpt::vec3, at::vec3, width::Cint, height::Cint, field_of_view_degrees::Cfloat)::Cvoid
end

function render_to(to_rendertarget, camera, projection, layer_filter, clear, viewport)
    @ccall StereoKitC.render_to(to_rendertarget::tex_t, camera::Ptr{matrix}, projection::Ptr{matrix}, layer_filter::render_layer_, clear::render_clear_, viewport::rect_t)::Cvoid
end

function render_material_to(to_rendertarget, override_material, camera, projection, layer_filter, clear, viewport)
    @ccall StereoKitC.render_material_to(to_rendertarget::tex_t, override_material::material_t, camera::Ptr{matrix}, projection::Ptr{matrix}, layer_filter::render_layer_, clear::render_clear_, viewport::rect_t)::Cvoid
end

function render_get_device(device, context)
    @ccall StereoKitC.render_get_device(device::Ptr{Ptr{Cvoid}}, context::Ptr{Ptr{Cvoid}})::Cvoid
end

function hierarchy_push(transform)
    @ccall StereoKitC.hierarchy_push(transform::Ptr{matrix})::Cvoid
end

# no prototype is found for this function at stereokit.h:1379:22, please use with caution
function hierarchy_pop()
    @ccall StereoKitC.hierarchy_pop()::Cvoid
end

function hierarchy_set_enabled(enabled)
    @ccall StereoKitC.hierarchy_set_enabled(enabled::bool32_t)::Cvoid
end

# no prototype is found for this function at stereokit.h:1381:22, please use with caution
function hierarchy_is_enabled()
    @ccall StereoKitC.hierarchy_is_enabled()::bool32_t
end

# no prototype is found for this function at stereokit.h:1382:22, please use with caution
function hierarchy_to_world()
    @ccall StereoKitC.hierarchy_to_world()::Ptr{matrix}
end

# no prototype is found for this function at stereokit.h:1383:22, please use with caution
function hierarchy_to_local()
    @ccall StereoKitC.hierarchy_to_local()::Ptr{matrix}
end

function hierarchy_to_local_point(world_pt)
    @ccall StereoKitC.hierarchy_to_local_point(world_pt::Ptr{vec3})::vec3
end

function hierarchy_to_local_direction(world_dir)
    @ccall StereoKitC.hierarchy_to_local_direction(world_dir::Ptr{vec3})::vec3
end

function hierarchy_to_local_rotation(world_orientation)
    @ccall StereoKitC.hierarchy_to_local_rotation(world_orientation::Ptr{quat})::quat
end

function hierarchy_to_local_pose(world_pose)
    @ccall StereoKitC.hierarchy_to_local_pose(world_pose::Ptr{pose_t})::pose_t
end

function hierarchy_to_world_point(local_pt)
    @ccall StereoKitC.hierarchy_to_world_point(local_pt::Ptr{vec3})::vec3
end

function hierarchy_to_world_direction(local_dir)
    @ccall StereoKitC.hierarchy_to_world_direction(local_dir::Ptr{vec3})::vec3
end

function hierarchy_to_world_rotation(local_orientation)
    @ccall StereoKitC.hierarchy_to_world_rotation(local_orientation::Ptr{quat})::quat
end

function hierarchy_to_world_pose(local_pose)
    @ccall StereoKitC.hierarchy_to_world_pose(local_pose::Ptr{pose_t})::pose_t
end

struct sound_inst_t
    _id::UInt16
    _slot::Int16
end

function sound_find(id)
    @ccall StereoKitC.sound_find(id::Ptr{Cchar})::sound_t
end

function sound_set_id(sound, id)
    @ccall StereoKitC.sound_set_id(sound::sound_t, id::Ptr{Cchar})::Cvoid
end

function sound_create(filename)
    @ccall StereoKitC.sound_create(filename::Ptr{Cchar})::sound_t
end

function sound_create_stream(buffer_duration)
    @ccall StereoKitC.sound_create_stream(buffer_duration::Cfloat)::sound_t
end

function sound_create_samples(samples_at_48000s, sample_count)
    @ccall StereoKitC.sound_create_samples(samples_at_48000s::Ptr{Cfloat}, sample_count::uint64_t)::sound_t
end

function sound_generate(_function, duration)
    @ccall StereoKitC.sound_generate(_function::Ptr{Cvoid}, duration::Cfloat)::sound_t
end

function sound_write_samples(sound, samples, sample_count)
    @ccall StereoKitC.sound_write_samples(sound::sound_t, samples::Ptr{Cfloat}, sample_count::uint64_t)::Cvoid
end

function sound_read_samples(sound, out_samples, sample_count)
    @ccall StereoKitC.sound_read_samples(sound::sound_t, out_samples::Ptr{Cfloat}, sample_count::uint64_t)::uint64_t
end

function sound_unread_samples(sound)
    @ccall StereoKitC.sound_unread_samples(sound::sound_t)::uint64_t
end

function sound_total_samples(sound)
    @ccall StereoKitC.sound_total_samples(sound::sound_t)::uint64_t
end

function sound_cursor_samples(sound)
    @ccall StereoKitC.sound_cursor_samples(sound::sound_t)::uint64_t
end

function sound_play(sound, at, volume)
    @ccall StereoKitC.sound_play(sound::sound_t, at::vec3, volume::Cfloat)::sound_inst_t
end

function sound_duration(sound)
    @ccall StereoKitC.sound_duration(sound::sound_t)::Cfloat
end

function sound_addref(sound)
    @ccall StereoKitC.sound_addref(sound::sound_t)::Cvoid
end

function sound_release(sound)
    @ccall StereoKitC.sound_release(sound::sound_t)::Cvoid
end

function sound_inst_stop(sound_inst)
    @ccall StereoKitC.sound_inst_stop(sound_inst::sound_inst_t)::Cvoid
end

function sound_inst_is_playing(sound_inst)
    @ccall StereoKitC.sound_inst_is_playing(sound_inst::sound_inst_t)::bool32_t
end

function sound_inst_set_pos(sound_inst, pos)
    @ccall StereoKitC.sound_inst_set_pos(sound_inst::sound_inst_t, pos::vec3)::Cvoid
end

function sound_inst_get_pos(sound_inst)
    @ccall StereoKitC.sound_inst_get_pos(sound_inst::sound_inst_t)::vec3
end

function sound_inst_set_volume(sound_inst, volume)
    @ccall StereoKitC.sound_inst_set_volume(sound_inst::sound_inst_t, volume::Cfloat)::Cvoid
end

function sound_inst_get_volume(sound_inst)
    @ccall StereoKitC.sound_inst_get_volume(sound_inst::sound_inst_t)::Cfloat
end

# no prototype is found for this function at stereokit.h:1425:21, please use with caution
function mic_device_count()
    @ccall StereoKitC.mic_device_count()::Int32
end

function mic_device_name(index)
    @ccall StereoKitC.mic_device_name(index::Int32)::Ptr{Cchar}
end

function mic_start(device_name)
    @ccall StereoKitC.mic_start(device_name::Ptr{Cchar})::bool32_t
end

# no prototype is found for this function at stereokit.h:1428:21, please use with caution
function mic_stop()
    @ccall StereoKitC.mic_stop()::Cvoid
end

# no prototype is found for this function at stereokit.h:1429:21, please use with caution
function mic_get_stream()
    @ccall StereoKitC.mic_get_stream()::sound_t
end

# no prototype is found for this function at stereokit.h:1430:21, please use with caution
function mic_is_recording()
    @ccall StereoKitC.mic_is_recording()::bool32_t
end

struct file_filter_t
    ext::NTuple{32, Cchar}
end

@cenum picker_mode_::UInt32 begin
    picker_mode_open = 0
    picker_mode_save = 1
end

@cenum text_context_::UInt32 begin
    text_context_text = 1
    text_context_number = 2
    text_context_uri = 10
    text_context_password = 18
end

function platform_file_picker(mode, callback_data, on_confirm, filters, filter_count)
    @ccall StereoKitC.platform_file_picker(mode::picker_mode_, callback_data::Ptr{Cvoid}, on_confirm::Ptr{Cvoid}, filters::Ptr{file_filter_t}, filter_count::Int32)::Cvoid
end

function platform_file_picker_sz(mode, callback_data, on_confirm, filters, filter_count)
    @ccall StereoKitC.platform_file_picker_sz(mode::picker_mode_, callback_data::Ptr{Cvoid}, on_confirm::Ptr{Cvoid}, filters::Ptr{file_filter_t}, filter_count::Int32)::Cvoid
end

# no prototype is found for this function at stereokit.h:1467:17, please use with caution
function platform_file_picker_close()
    @ccall StereoKitC.platform_file_picker_close()::Cvoid
end
